# AOC2022

./: .aoc  .aoc.example  .env.example  .gitignore  aoc2022.cabal  readme.md
.github/workflows/: format-checker.yml  readme-stars.yml
app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day5.hs  Day6.hs  Day8.hs  Day9.hs  Fetch.hs  Submit.hs
lib/: SantaLib.hs
lib/SantaLib/: Parsing.hs
