cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Loves solutions for advent of code 2022

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/lovelyckaro/AOC2022/issues

-- The license under which the package is released.
-- license:
author:             Love Lyckaro
maintainer:         love.lyckaro@hotmail.se


library
  hs-source-dirs: lib
  exposed-modules:
    SantaLib
    SantaLib.Parsing
  other-modules:
  build-depends:
    base >= 4,
    advent-of-code-api >= 0.2.8.0,
    containers,
    text,
    tagsoup,
    vector,
    megaparsec
  default-language: GHC2021

executable fetch
  main-is: Fetch.hs
  build-depends:
    base >= 4,
    aoc2022
  hs-source-dirs: app
  default-language: GHC2021

executable submit
  main-is: Submit.hs
  build-depends:
    base >= 4,
    aoc2022
  hs-source-dirs: app
  default-language: GHC2021

executable day1
    main-is: Day01.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day2
    main-is: Day02.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day3
    main-is: Day03.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day4
    main-is: Day04.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day5
    main-is: Day05.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl,
      regex-tdfa
    hs-source-dirs: app
    default-language: GHC2021
executable day6
    main-is: Day06.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day7
    main-is: Day07.hs
    ghc-options: -interactive-print Text.Pretty.Simple.pPrint
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl,
      pretty-simple
    hs-source-dirs: app
    default-language: GHC2021
executable day8
    main-is: Day08.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day9
    main-is: Day09.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day10
    main-is: Day10.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day11
    main-is: Day11.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day12
    main-is: Day12.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day13
    main-is: Day13.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day14
    main-is: Day14.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day15
    main-is: Day15.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day16
    main-is: Day16.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day17
    main-is: Day17.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day18
    main-is: Day18.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day19
    main-is: Day19.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day20
    main-is: Day20.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day21
    main-is: Day21.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day22
    main-is: Day22.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day23
    main-is: Day23.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day24
    main-is: Day24.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
executable day25
    main-is: Day25.hs
    build-depends:
      base >= 4.16.0.0,
      containers,
      megaparsec,
      unordered-containers,
      text,
      vector,
      aoc2022,
      split,
      mtl
    hs-source-dirs: app
    default-language: GHC2021
